--- a/web/src/app/web/web-sys/web-sys.component.html
+++ b/web/src/app/web/web-sys/web-sys.component.html
@@ -6,7 +6,8 @@
     background: #D9DEE4;
     z-index: 10;
     width: 200px;">
-    <span title="系统列表" style="cursor: pointer;" [routerLink]="[ '/dashboard']"> o(*￣︶￣*)o</span>
+    <span title="系统列表" style="cursor: pointer;" [routerLink]="[ '/dashboard']">
+        o(*￣︶￣*)o</span>
 </nz-layout>
 <nz-layout class="sys-header" style="min-width:1000px;">
     <div style="margin: auto 5px;position:relative;">
@@ -15,13 +16,20 @@
             <nz-option *ngFor="let item of sysItems" [nzValue]="item.appKey" [nzLabel]="item.appName"></nz-option>
         </nz-select>
         <div style="position: absolute;top: 0;right: 8px;">
-            <button *ngIf="!isFullScreen" style="margin: 0 8px;" (click)="fullScreen()" nz-button nzType="default"><i nz-icon type="arrows-alt" theme="outline"></i>进入全屏</button>
-            <button *ngIf="isFullScreen" style="margin: 0 8px;" (click)="exitFullScreen()" nz-button nzType="default"><i nz-icon type="shrink" theme="outline"></i>退出全屏(Esc)</button>
-            <nz-badge nzDot><button nz-button nz-popover nzPlacement="left" [nzTitle]="null" [nzContent]="contentTemplate" nzTrigger="click" nzType="default"><i class="anticon anticon-question"></i>帮助文档</button></nz-badge>
-            <span *ngIf="showGlobalTimer" style="padding: 8px;border: solid 1px #d9d9d9;margin: 0 8px;display: inline-block;line-height: 1;">
-                  <app-time-choice-panel (selectOver)="selectOver($event)" [time]="4"></app-time-choice-panel>
-              </span> 
-        </div>  
+            <button *ngIf="!isFullScreen" style="margin: 0 8px;vertical-align:
+                middle;" (click)="fullScreen()" nz-button nzType="default"><i
+                    nz-icon type="arrows-alt" theme="outline"></i>进入全屏</button>
+            <button *ngIf="isFullScreen" style="margin: 0 8px;vertical-align:
+                middle;" (click)="exitFullScreen()" nz-button nzType="default"><i
+                    nz-icon type="shrink" theme="outline"></i>退出全屏</button>
+            <nz-badge style="vertical-align: middle;" nzDot><button nz-button nz-popover nzPlacement="left" [nzTitle]="null" [nzContent]="contentTemplate" nzTrigger="click" nzType="default"><i class="anticon anticon-question"></i>帮助文档</button></nz-badge>
+            <span *ngIf="showGlobalTimer" style="vertical-align: middle;padding:
+                8px;border: solid 1px #d9d9d9;margin: 0 8px;display:
+                inline-block;line-height: 1;">
+                <app-time-choice-panel (selectOver)="selectOver($event)"
+                    [time]="4"></app-time-choice-panel>
+            </span>
+        </div>
     </div>
 </nz-layout>
 <ng-template #contentTemplate>
@@ -48,8 +56,11 @@
             <ul nz-menu [nzTheme]="'light'" [nzMode]="'inline'">
                 <li *ngFor="let item of leftNavItems" routerLinkActive="ant-menu-item-selected" style="margin: 0;" nz-menu-item [routerLink]="[ item.value ]">
                     <span>
-            <i class="{{item.icon}}"></i>
-            <span class="nav-text">{{item.label}}</span>
+                        <nz-badge *ngIf="item.value=='resourceDetails'" nzDot>
+                            <i nz-icon [type]="item.icon"></i></nz-badge>
+                        <i *ngIf="item.value!='resourceDetails'" nz-icon
+                            [type]="item.icon"></i>
+                        <span class="nav-text">{{item.label}}</span>
                     </span>
                 </li>
             </ul>
@@ -58,7 +69,7 @@
 </div>
 <div #centerContent style="overflow:auto;">
     <nz-layout style="margin-left: 200px;min-width: 1000px;">
-        <nz-content style="background:#fff;  min-height: 280px;">
+        <nz-content style="background:#fff; min-height: 280px;">
             <router-outlet></router-outlet>
         </nz-content>
     </nz-layout>
