--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -10,14 +10,12 @@
         text-align: center;
         left: 0;
         right: 0;
-        width: 800px;
         height: 500px;
-        margin: auto;
+        margin: -250px 10% auto;
         border-radius: 20px;
         box-shadow: 1px 1px 40px #1890ff;
         padding: 8px;
         padding-top: 160px;
-        margin-top: -250px;
         .title {
             color: #fff;
             font-size: 80px;
