--- a/web/src/app/web/web-sys/resource-load-details/resource-load-details.component.html
+++ b/web/src/app/web/web-sys/resource-load-details/resource-load-details.component.html
@@ -49,7 +49,7 @@
                 <td>{{data.onlineip}}</td>
                 <td>{{data.rInitiatorType}}</td>
                 <td>{{data.rEntryType}}</td>
-                <td>{{data.rSize==0?'from cache':data.rSize+'KB'}}</td>
+                <td>{{data.rSize&&(data.rSize==0?'from cache':data.rSize+'KB')}}</td>
                 <td>{{data.rDuration.toString().substr(0,4)}}ms</td>
             </tr>
         </tbody>
