--- a/web/src/app/web/web-sys/web-sys.component.html
+++ b/web/src/app/web/web-sys/web-sys.component.html
@@ -64,8 +64,8 @@
         </nz-sider>
     </nz-layout>
 </div>
-<div #centerContent style="overflow:auto;">
-    <nz-layout style="margin-left: 200px;min-width: 1000px;">
+<div #centerContent style="overflow:auto;min-width: 1200px;">
+    <nz-layout style="margin-left: 200px;">
         <nz-content style="background:#fff; min-height: 280px;">
             <router-outlet></router-outlet>
         </nz-content>
