--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -75,7 +75,7 @@ input,
         overflow: hidden;
         text-overflow: ellipsis;
         display: inline-block;
-        word-break: break-all;
+        // word-break: break-all;
         height: 20px;
     }
     .right {
