--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -1,4 +1,4 @@
-<section id="home-section">
+<section id="home-section" style="width:100%;">
     <!-- <video id="video-index" autoplay="true" muted="true" loop="true" src="../../../assets/video/index-4.mp4"></video> -->
     <!-- <img src="../../../assets/images/home.jpg" alt=""> -->
     <div id="deccription">
