--- a/web/src/app/web/web-sys/visit-page/visit-page.component.html
+++ b/web/src/app/web/web-sys/visit-page/visit-page.component.html
@@ -138,7 +138,7 @@
                   <td>{{data2.code}}</td>
                   <td>{{data2.createTime|date:"yyyy/MM/dd HH:mm:ss"}}</td>
                   <td>
-                    <a (click)="gotoDetails(data)">明细</a>
+                    <a (click)="gotoDetails(data,data2)">明细</a>
                   </td>
                 </tr>
               </tbody>
