--- a/web/src/app/web/web-sys/web-sys.component.html
+++ b/web/src/app/web/web-sys/web-sys.component.html
@@ -6,8 +6,11 @@
     background: #D9DEE4;
     z-index: 10;
     width: 200px;">
-    <span title="系统列表" style="cursor: pointer;" [routerLink]="[ '/dashboard']">
-        o(*￣︶￣*)o</span>
+    <span title="系统列表" style="cursor: pointer;cursor: pointer;
+    font-family: cursive;
+    font-size: 14px;
+    color: dodgerblue;" [routerLink]="[ '/dashboard']">
+       << 返回系统列表</span>
 </nz-layout>
 <nz-layout class="sys-header" style="min-width:1000px;">
     <div style="margin: auto 5px;position:relative;">
