--- a/web/src/app/web/web-sys/resource-load-details/resource-load-details.component.html
+++ b/web/src/app/web/web-sys/resource-load-details/resource-load-details.component.html
@@ -50,7 +50,7 @@
                 <td>{{data.rInitiatorType}}</td>
                 <td>{{data.rEntryType}}</td>
                 <td>{{data.rSize&&(data.rSize==0?'from cache':data.rSize+'KB')}}</td>
-                <td>{{data.rDuration.toString().substr(0,4)}}ms</td>
+                <td>{{data.rDuration}}ms</td>
             </tr>
         </tbody>
     </nz-table>
