--- a/web/src/app/public/advise-bar/advise-bar.component.html
+++ b/web/src/app/public/advise-bar/advise-bar.component.html
@@ -3,7 +3,10 @@
   <div class="advise" *ngIf="showAdvise" (click)="show($event,true)">
     <div>
       <i nz-icon (click)="show($event,false)" title="关闭" style="float: right;cursor: pointer;" type="close-circle" theme="outline"></i></div>
-    <a href="https://promotion.aliyun.com/ntms/act/enterprise-discount.html?userCode=9xbvcsop" target="_blank">
+      <a href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=9xbvcsop" target="_blank">
+        <img src="../../../assets/images/4.png">
+      </a>
+      <a href="https://promotion.aliyun.com/ntms/act/enterprise-discount.html?userCode=9xbvcsop" target="_blank">
       <img src="../../../assets/images/1.png">
     </a>
     <a href="https://promotion.aliyun.com/ntms/act/qwbk.html?userCode=9xbvcsop" target="_blank">
