--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -10,9 +10,9 @@
                     <img style="width: 24px;" src="../assets/images/github.png" alt="github"></a>
             </li>
         </ul>
-    </nz-header>
+    </nz-header> 
 </nz-layout>
-<app-advise-bar></app-advise-bar> 
+<app-advise-bar [data]="dataItems"></app-advise-bar> 
 <div class="layout">
     <router-outlet></router-outlet>
 </div>
