--- a/web/src/app/public/advise-bar/advise-bar.component.scss
+++ b/web/src/app/public/advise-bar/advise-bar.component.scss
@@ -28,9 +28,9 @@
 
   /* Non-prefixed version, currently not supported by any browser */
   .advise {
-    width: 800px;
+    width: 600px;
     min-height: 200px;
-    max-height: 600px;
+    max-height: 400px;
     overflow: auto;
     position: absolute;
     left: 52px;
@@ -43,12 +43,12 @@
     box-shadow: 0px 0px 4px;
 
     a{
-      width: 350px;
+      width: 250px;
       display: inline-block;
-      margin: 8px 2px;
-      // img{
-      //   width: 100%;
-      // }
+      margin: 16px;
+      img{
+        width: 100%;
+      }
     }
   }
 
