--- a/web/src/app/public/advise-bar/advise-bar.component.scss
+++ b/web/src/app/public/advise-bar/advise-bar.component.scss
@@ -1,8 +1,6 @@
 .advise-container {
-  position: absolute;
-  left: 25%;
-  top: 14px;
-  z-index: 99999;
+   position: fixed;
+  z-index: 2000;
   color: #fff;
   padding: 16px;
   border-radius: 50%;
@@ -11,7 +9,6 @@
   line-height: 1;
   font-size: 12px;
   border: solid 2px #fff;
-  background: linear-gradient(0deg, rgba(54, 137, 231, 1), rgba(61, 147, 244, 1), rgba(81, 163, 255, 1));
   box-shadow: 0px 1px 6px 0px rgba(49, 50, 51, 0.47), 0px 1px 3px 0px rgba(186, 218, 255, 0.88);
   cursor: pointer;
   -webkit-touch-callout: none;
@@ -37,7 +34,7 @@
     border: solid 1px #3D93F4;
     background: #fff;
     color: #3D93F4;
-    padding: 4px;
+    padding:0 4px;
     cursor: default;
     border-radius: 4px;
     box-shadow: 0px 0px 4px;
