--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -15,9 +15,81 @@
 
     </div>
 </section>
-
-
-<nz-modal [nzOkText]="'确认'" [nzCancelText]="'取消'" [(nzVisible)]="isVisible_login" nzTitle="登录" (nzOnOk)="login()" (nzOnCancel)="isVisible_login=false;">
+<section id="home-section2" style="width:100%;">
+    <h4>谁在使用</h4>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="前端性能监控平台"
+            nzDescription="从不同维度去统计用户真实访问站点的情况，再现用户访问场景，帮助你快速定位问题。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="cnbooks" nzDescription="【Kindle中国】_Amazon Kindle 完全购买攻略。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="bboss"
+            nzDescription="bboss是一个j2ee开源框架，为企业级应用开发提供一站式解决方案，并能有效地支撑移动应用开发。">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="……" nzDescription="More">
+        </nz-card-meta>
+    </nz-card>
+    <ng-template #avatarTemplate>
+        <nz-avatar nzSrc="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
+    </ng-template>
+    <h3 style="margin-left: 16px;">虚位以待(推广位)……</h3>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;" [nzLoading]="true">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="Card title" nzDescription="This is the description">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;" [nzLoading]="true">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="Card title" nzDescription="This is the description">
+        </nz-card-meta>
+    </nz-card>
+    <nz-card style="width: 300px;display: inline-block;vertical-align: top;margin: 16px;" [nzLoading]="true">
+        <nz-card-meta [nzAvatar]="avatarTemplate" nzTitle="Card title" nzDescription="This is the description">
+        </nz-card-meta>
+    </nz-card>
+</section>
+<section id="footer" style="width:100%;">
+    <div class="grid-fluid">
+        <div class="grid">
+            <h3>资源</h3>
+            <ul>
+                <li><a target="_blank" href="https://angular.cn/" title="Angular官网">Angular</a></li>
+                <li><a target="_blank" href="https://docs.mongodb.com/" title="数据库MongoDB">MongoDB</a>
+                </li>
+                <li><a target="_blank" href="https://ant.design/" title="UI设计模式">Ant Design</a></li>
+                <li><a target="_blank" href="https://ng.ant.design/" title="Ant Design的Angular实现">NG-ZORRO</a>
+                </li>
+            </ul>
+        </div>
+        <div class="grid">
+            <h3>帮助</h3>
+            <ul>
+                <li><a target="_blank" href="https://github.com/kisslove/web-monitoring" title="源码仓库">GitHub</a></li>
+                <li><a target="_blank" href="/assets/images/weixin-gongzhonghao.jpg" title="关注公众号">公众号</a>
+                </li>
+                <li><a target="_blank" href="/assets/images/weixin.png" title="微信">支持作者</a></li>
+            </ul>
+        </div>
+        <div class="grid">
+            <h3>推广(招商中)</h3>
+            <ul>
+                <li><a target="_blank" href="https://www.51link.com/ ?ruid=9095"
+                        title="发现一个非常不错的友情链接平台，可以买卖友链，可以交换友链，朋友们可以试试。">51 链</a>
+                </li>
+                <li><a target="_blank" href="https://s.imooc.com/SxjKSih"
+                        title="从基础到实战 手把手带你掌握新版Webpack4.0">webpack课程</a></li>
+                <li><a target="_blank" href="http://coolwow.myselfbuy.com/" title="一款帮你选择贷款方式的多功能利息计算工具">酷娃利息对比计算工具</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<nz-modal [nzOkText]="'确认'" [nzCancelText]="'取消'" [(nzVisible)]="isVisible_login" nzTitle="登录" (nzOnOk)="login()"
+    (nzOnCancel)="isVisible_login=false;">
     <nz-form-item>
         <nz-form-label [nzSm]="4" [nzXs]="24">邮箱</nz-form-label>
         <nz-form-control [nzSm]="18" [nzXs]="24">
@@ -32,12 +104,14 @@
     </nz-form-item>
     <nz-form-item style="margin-bottom:0;">
         <nz-form-control [nzSm]="24" [nzXs]="24" style="text-align: right;width:90%;">
-            <span>没有账户?</span><span (click)="isVisible_login=false;isVisible_register=true;" style="margin-left: 24px;text-decoration: underline;cursor: pointer;">马上注册</span>
+            <span>没有账户?</span><span (click)="isVisible_login=false;isVisible_register=true;"
+                style="margin-left: 24px;text-decoration: underline;cursor: pointer;">马上注册</span>
         </nz-form-control>
     </nz-form-item>
 </nz-modal>
 
-<nz-modal [nzOkText]="'确认'" [nzCancelText]="'取消'" [(nzVisible)]="isVisible_register" nzTitle="免费注册" (nzOnOk)="isVisible_register=false;" (nzOnCancel)="isVisible_register=false;">
+<nz-modal [nzOkText]="'确认'" [nzCancelText]="'取消'" [(nzVisible)]="isVisible_register" nzTitle="免费注册"
+    (nzOnOk)="isVisible_register=false;" (nzOnCancel)="isVisible_register=false;">
     <h4 style="color:#03A9F4 !important;">关注作者公众号，发送邮箱+密码，免费注册，获得独立账号（所创建的项目仅自己可见）。</h4>
     <div style="text-align: center;margin:4px;">
         <img style="height:150px;width:auto;" title="微信公众号" src="../assets/images/weixin-gongzhonghao.jpg" alt="微信">
