--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -1,56 +1,104 @@
 #home-section {
-    margin-top: 50px;
-    position: relative;
-    background: url('../../../assets/images/home.jpg') no-repeat;
-    background-position: center;
-    background-size: cover;
-    #deccription {
-        position: absolute;
-        top: 50%;
-        text-align: center;
-        left: 0;
-        right: 0;
-        height: 500px;
-        margin: -250px 10% auto;
-        border-radius: 20px;
-        box-shadow: 1px 1px 40px #1890ff;
-        padding: 8px;
-        padding-top: 160px;
-        .title {
-            color: #fff;
-            font-size: 80px;
-        }
-        .opt {
-            button {
-                width: 200px;
-                height: 40px;
-                line-height: 40px;
-                color: #fff;
-                border: solid 1px #fff;
-                border-radius: 18px;
-                background: rgba(217, 217, 217, 0);
-                &:hover {
-                    background: #fff !important;
-                    color: #333;
-                    cursor: pointer;
-                    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-                }
-            }
-        }
+  margin-top: 50px;
+  height: 600px;
+  position: relative;
+  background: url('../../../assets/images/home.jpg') no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-bottom-left-radius: 60px;
+  border-bottom-right-radius: 60px;
+  box-shadow: 1px 1px 10px grey;
+  #deccription {
+    position: absolute;
+    top: 40%;
+    text-align: center;
+    left: 0;
+    right: 0;
+    height: 500px;
+    margin: -250px 10% auto;
+    border-radius: 20px;
+    // box-shadow: 1px 1px 40px #1890ff;
+    padding: 8px;
+    padding-top: 160px;
+
+    .title {
+      color: #fff;
+      font-size: 80px;
     }
+
+    .opt {
+      button {
+        width: 200px;
+        height: 40px;
+        line-height: 40px;
+        color: #fff;
+        border: solid 1px #fff;
+        border-radius: 18px;
+        background: rgba(217, 217, 217, 0);
+
+        &:hover {
+          background: #fff !important;
+          color: #333;
+          cursor: pointer;
+          transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+      }
+    }
+  }
+}
+
+#home-section2 {
+  min-height: 700px;
+  padding: 50px;
+  h4{
+    text-align: center;
+    font-size: 40px;
+    font-weight: 600;
+    color: #333;
+  }
+}
+
+#footer {
+  height: 200px;
+  background: #3D3E49;
+  color: #eee;
+
+  .grid-fluid {
+    width: 600px;
+    margin: auto;
+    height: 200px;
+    padding-top: 24px;
+
+    a,
+    h3 {
+      color: #eee;
+      margin-bottom: 16px;
+    }
+
+    .grid {
+      display: inline-block;
+      width: 33.33%;
+      vertical-align: top;
+      ul {
+        list-style: none;
+        padding-left: 0;
+      }
+    }
+  }
 }
 
 // Extra small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
-    .title {
-        font-size: 20px !important;
+  .title {
+    font-size: 20px !important;
+  }
+
+  .opt {
+    button {
+      width: 100px !important;
+      height: 24px !important;
+      line-height: 24px !important;
+      border-radius: 8px !important;
     }
-    .opt {
-        button {
-            width: 100px !important;
-            height: 24px !important;
-            line-height: 24px !important;
-            border-radius: 8px !important;
-        }
-    }
+  }
 }
