--- a/web/src/app/homepage/home-page/homepage.component.scss
+++ b/web/src/app/homepage/home-page/homepage.component.scss
@@ -5,8 +5,8 @@
   background: url('../../../assets/images/home.jpg') no-repeat;
   background-position: center;
   background-size: cover;
-  border-bottom-left-radius: 60px;
-  border-bottom-right-radius: 60px;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   box-shadow: 1px 1px 10px grey;
   #deccription {
     position: absolute;
@@ -64,7 +64,8 @@
   color: #eee;
 
   .grid-fluid {
-    width: 600px;
+    max-width: 600px;
+    width: 80%;
     margin: auto;
     height: 200px;
     padding-top: 24px;
