--- a/web/src/app/homepage/home-page/homepage.component.html
+++ b/web/src/app/homepage/home-page/homepage.component.html
@@ -12,7 +12,6 @@
             <button [routerLink]="[ '/dashboard' ]">马上体验</button> &nbsp;
             <button (click)="isVisible_login=true;">独立账户</button>
         </div>
-
     </div>
 </section>
 <section id="home-section2" style="width:100%;">
@@ -52,6 +51,58 @@
         </nz-card-meta>
     </nz-card>
 </section>
+<section id="home-section2" style="width:100%;padding: 0px 50px;">
+    <h3 style="margin-left: 16px;">慕课推荐(专栏)</h3>
+    <ul>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/WzO56cr">从 0 开始学爬虫</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/W7Wmpdv">Webpack 从零入门到工程化实战</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/WM7wYOD">用技术人的眼光看世界 • 程序员技术指北</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/WM7wYOD">教你用 Python 进阶量化交易</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/Wlba9hm">一条龙的 Node·Vue·React 服务器部署</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/Wxv7KHc">两小时学会 Node.js stream</a>
+        </li>
+    </ul>
+</section>
+<section id="home-section2" style="width:100%;padding: 0px 50px;">
+    <h3 style="margin-left: 16px;">慕课推荐(实战)</h3>
+    <ul>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/SnNi1QQ">剑指Java面试-Offer直通车</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/SNTMyFV">纯正商业级应用－Node.js Koa2开发微信小程序服务端</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/SoXuPiZ">前端下一代开发语言TypeScript 从基础到axios实战</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/SYa6RSU">JavaScript版 数据结构与算法</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/SXZyu9o">部署落地+业务迁移 玩转k8s进阶与企业级实践技能</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/ScyFAfI">微信分享与支付专项课程 （公众号 小程序（云））</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/Ssc67Nu">React新特性Hooks 重构去哪儿网火车票PWA</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://s.imooc.com/SxjKSih">从基础到实战 手把手带你掌握新版Webpack4.0</a>
+        </li>
+    </ul>
+</section>
 <section id="footer" style="width:100%;">
     <div class="grid-fluid">
         <div class="grid">
@@ -80,8 +131,7 @@
                 <li><a target="_blank" href="https://www.51link.com/?ruid=9095"
                         title="发现一个非常不错的友情链接平台，可以买卖友链，可以交换友链，朋友们可以试试。">51 链</a>
                 </li>
-                <li><a target="_blank" href="https://s.imooc.com/SxjKSih"
-                        title="从基础到实战 手把手带你掌握新版Webpack4.0">webpack课程</a></li>
+                <li><a target="_blank" href="https://promotion.aliyun.com/ntms/yunparter/invite.html?userCode=9xbvcsop">阿里云优惠购</a></li>
                 <li><a target="_blank" href="http://coolwow.myselfbuy.com/" title="一款帮你选择贷款方式的多功能利息计算工具">酷娃利息对比计算工具</a>
                 </li>
             </ul>
