--- a/web/src/app/public/advise-bar/advise-bar.component.scss
+++ b/web/src/app/public/advise-bar/advise-bar.component.scss
@@ -25,7 +25,7 @@
 
   /* Non-prefixed version, currently not supported by any browser */
   .advise {
-    width: 600px;
+    // width: 600px;
     min-height: 200px;
     max-height: 400px;
     overflow: auto;
